Adjust class names

--- a/index.html
+++ b/index.html
@@ -212,18 +212,18 @@
             <fieldset class="grid push-2">
               <legend class="unit xs-1 s-1 giga push-1-2">Do you have a pick-up truck you’d be willing to use?</legend>
               <div class="unit xs-1 s-1">
-                <input type="radio" id="yes" name="truck">
+                <input type="radio" id="yes-2" name="truck">
                 <label for="yes-2" class="push-r">Yes</label>
-                <input type="radio" id="no" name="truck">
+                <input type="radio" id="no-2" name="truck">
                 <label for="no-2">No</label>
               </div>
             </fieldset>
             <fieldset class="grid push-2">
               <legend class="unit xs-1 s-1 giga push-1-2">Do you have up-to-date first-aid certification?</legend>
               <div class="unit xs-1 s-1">
-                <input type="radio" id="yes" name="certification">
+                <input type="radio" id="yes-3" name="certification">
                 <label for="yes-3" class="push-r">Yes</label>
-                <input type="radio" id="no" name="certification">
+                <input type="radio" id="no-3" name="certification">
                 <label for="no-3">No</label>
               </div>
             </fieldset>
