--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1 class="bold exa push-1-2">Apply to be a tree planter</h1>
         <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
       </header>
-      <div class="grid">
-        <form class="unit gutter-1-2" method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
+      <div class="grid gutter-1-2">
+        <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
           <fieldset class="pad-t-1-2">
             <legend class="unit xs-1 s-1 push giga">Personal details</legend>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
