Add missing elements

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
               <label for="size" class="push-1-8">T-shirt size</label>
               <select id="size" name="size">
-                <option label="select">Select a t-shirt size</option>
+                <option label="select" value="">Select a t-shirt size</option>
                 <option>Fitted: XS</option>
                 <option>Fitted: S</option>
                 <option>Fitted: M</option>
@@ -75,7 +75,7 @@
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
                 <label for="province" class="push-1-8">Province</label>
                 <select id="province" name="province">
-                  <option label="province">Select a province</option>
+                  <option label="province" value="">Select a province</option>
                   <option>Alberta</option>
                   <option>British Columbia</option>
                   <option>Manitoba</option>
@@ -108,11 +108,11 @@
                       <input id="digging" type="checkbox" name="activities">
                       <label for="digging" class="push-1-8">Digging holes</label>
                     </div>
-                      <div class="unit xs-1 s-1 push-1-4">
+                    <div class="unit xs-1 s-1 push-1-4">
                       <input id="dirty" type="checkbox" name="activities">
                       <label for="dirty" class="push-1-8">Getting dirty</label>
                     </div>
-                      <div class="unit xs-1 s-1 push-1-4">
+                    <div class="unit xs-1 s-1 push-1-4">
                       <input id="lifting" type="checkbox" name="activities">
                       <label for="lifting" class="push-1-8">Lifting heavy objects</label>
                     </div>
