Fix indentation errors

--- a/index.html
+++ b/index.html
@@ -146,27 +146,27 @@
             </fieldset>
           </div>
           <fieldset class="grid">
-            <legend class="unit xs-1 s-1 giga push-1-2">Do you have any experience with the following?</legend>
+            <legend class="unit xs-1 s-1 m-1 l-1 xl-1 giga push-1-2">Do you have any experience with the following?</legend>
             <div class="grid">
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
                 <div class="grid">
-                  <div class="unit xs-1 s-1 push-1-4">
+                  <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-4">
                     <input id="shovel" type="checkbox" name="experience">
                     <label for="shovel" class="push-1-8">Shovels</label>
                   </div>
-                  <div class="unit xs-1 s-1 push-1-4">
+                  <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-4">
                     <input id="gps" type="checkbox" name="experience">
                     <label for="gps" class="push-1-8">Hand-held GPS</label>
                   </div>
-                  <div class="unit xs-1 s-1 push-1-4">
+                  <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-4">
                     <input id="writing" type="checkbox" name="experience">
                     <label for="writing" class="push-1-8">Writing & blogging</label>
                   </div>
-                  <div class="unit xs-1 s-1 push-1-4">
+                  <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-4">
                     <input id="photography" type="checkbox" name="experience">
                     <label for="photography" class="push-1-8">Photography</label>
                   </div>
-                  <div class="unit xs-1 s-1 push-1-4">
+                  <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-4">
                     <input id="climbing" type="checkbox" name="experience">
                     <label for="climbing" class="push-1-8">Trail & hill climbing</label>
                   </div>
@@ -174,7 +174,7 @@
               </div>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
                 <div class="grid">
-                  <div class="unit xs-1 s-1 push-1-4">
+                  <div class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-4">
                     <input id="craft" type="checkbox" name="experience">
                     <label for="craft" class="push-1-8">Bush craft</label>
                   </div>
