Add missing classes

--- a/index.html
+++ b/index.html
@@ -17,47 +17,50 @@
         <h1 class="bold exa push-1-2">Apply to be a tree planter</h1>
         <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
       </header>
-      <div class="grid gutter-1-2">
-        <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
-          <fieldset class="pad-t-1-2">
+    </div>
+      <div class="gutter-1-2">
+        <form method="POST" class="grid" action="https://formspree.io/dano0015@algonquinlive.com">
+          <fieldset class="unit xs-1 s-1 m-1 l-1 xl-1 pad-t-1-2">
             <legend class="unit xs-1 s-1 push giga">Personal details</legend>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="name" class="push-1-8">Full name</label>
-              <input id="name" name="name" required>
-              <p class="micro italic pad-t-1-8">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
-            </div>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="preferred" class="push-1-8">What should we call you?</label>
-              <input id="preferred" name="preferred" required>
-              <p class="micro italic">What all your friends call you, e.g. “Liz”.</p>
-            </div>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <label for="birthdate" class="push-1-8">Date of birth</label>
-              <input id="birthdate" type="date" required>
-            </div>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <label for="size" class="push-1-8">T-shirt size</label>
-              <select id="size" name="size">
-                <option label="select" value="">Select a t-shirt size</option>
-                <option>Fitted: XS</option>
-                <option>Fitted: S</option>
-                <option>Fitted: M</option>
-                <option>Fitted: L</option>
-                <option>Fitted: XL</option>
-                <option>Straight-cut: XS</option>
-                <option>Straight-cut: S</option>
-                <option>Straight-cut: M</option>
-                <option>Straight-cut: L</option>
-                <option>Straight-cut: XL</option>
-              </select>
-            </div>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <label for="email" class="push-1-8">Email</label>
-              <input id="email" type="email" name="email" required>
-            </div>
-            <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-              <label for="tel" class="push-1-8">Phone number <i>(optional)</i></label>
-              <input id="tel" type="tel" name="tel">
+            <div class="grid">
+              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="name" class="push-1-8">Full name</label>
+                <input id="name" name="name" required>
+                <p class="micro italic pad-t-1-8">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+              </div>
+              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+                <label for="preferred" class="push-1-8">What should we call you?</label>
+                <input id="preferred" name="preferred" required>
+                <p class="micro italic">What all your friends call you, e.g. “Liz”.</p>
+              </div>
+              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                <label for="birthdate" class="push-1-8">Date of birth</label>
+                <input id="birthdate" type="date" required>
+              </div>
+              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                <label for="size" class="push-1-8">T-shirt size</label>
+                <select id="size" name="size">
+                  <option label="select" value="">Select a t-shirt size</option>
+                  <option>Fitted: XS</option>
+                  <option>Fitted: S</option>
+                  <option>Fitted: M</option>
+                  <option>Fitted: L</option>
+                  <option>Fitted: XL</option>
+                  <option>Straight-cut: XS</option>
+                  <option>Straight-cut: S</option>
+                  <option>Straight-cut: M</option>
+                  <option>Straight-cut: L</option>
+                  <option>Straight-cut: XL</option>
+                </select>
+              </div>
+              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                <label for="email" class="push-1-8">Email</label>
+                <input id="email" type="email" name="email" required>
+              </div>
+              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
+                <label for="tel" class="push-1-8">Phone number <i>(optional)</i></label>
+                <input id="tel" type="tel" name="tel">
+              </div>
             </div>
           </fieldset>
           <hr>
