--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <h1 class="bold exa push-1-2">Apply to be a tree planter</h1>
         <p class="mega">Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
       </header>
-    </div>
-      <div class="gutter-1-2">
-        <form method="POST" class="grid" action="https://formspree.io/dano0015@algonquinlive.com">
-          <fieldset class="unit xs-1 s-1 m-1 l-1 xl-1 pad-t-1-2">
-            <legend class="unit xs-1 s-1 push giga">Personal details</legend>
+      <div class="unit gutter-1-2">
+        <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
+          <fieldset class="pad-t-1-2">
+            <legend class="push giga">Personal details</legend>
             <div class="grid">
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
                 <label for="name" class="push-1-8">Full name</label>
@@ -66,44 +65,46 @@
           <hr>
           <div class="pad-t">
             <fieldset>
-              <legend class="unit xs-1 s-1 giga push">Address</legend>
-              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="address" class="push-1-8 pad-t-1-2">Street address</label>
-                <input id="address" name="address" required>
-              </div>
-              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="city" class="push-1-8">City</label>
-                <input id="city" name="city" required>
-              </div>
-              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="province" class="push-1-8">Province</label>
-                <select id="province" name="province">
-                  <option label="province" value="">Select a province</option>
-                  <option>Alberta</option>
-                  <option>British Columbia</option>
-                  <option>Manitoba</option>
-                  <option>New Brunswick</option>
-                  <option>Newfoundland & Labrador</option>
-                  <option>Northwest Territories</option>
-                  <option>Nova Scotia</option>
-                  <option>Nunavut</option>
-                  <option>Ontario</option>
-                  <option>Prince Edward Island</option>
-                  <option>Québec</option>
-                  <option>Saskatchewan</option>
-                  <option>Yukon</option>
-                </select>
-              </div>
-              <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="code" class="push-1-8">Postal code</label>
-                <input id="code" name="code" required>
+              <legend class="giga push">Address</legend>
+              <div class="grid">
+                <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                  <label for="address" class="push-1-8 pad-t-1-2">Street address</label>
+                  <input id="address" name="address" required>
+                </div>
+                <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                  <label for="city" class="push-1-8">City</label>
+                  <input id="city" name="city" required>
+                </div>
+                <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                  <label for="province" class="push-1-8">Province</label>
+                  <select id="province" name="province">
+                    <option label="province" value="">Select a province</option>
+                    <option>Alberta</option>
+                    <option>British Columbia</option>
+                    <option>Manitoba</option>
+                    <option>New Brunswick</option>
+                    <option>Newfoundland & Labrador</option>
+                    <option>Northwest Territories</option>
+                    <option>Nova Scotia</option>
+                    <option>Nunavut</option>
+                    <option>Ontario</option>
+                    <option>Prince Edward Island</option>
+                    <option>Québec</option>
+                    <option>Saskatchewan</option>
+                    <option>Yukon</option>
+                  </select>
+                </div>
+                <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
+                  <label for="code" class="push-1-8">Postal code</label>
+                  <input id="code" name="code" required>
+                </div>
               </div>
             </fieldset>
           </div>
           <hr>
           <div class="pad-t grid">
-            <fieldset class="unit xs-1 s-1 push-2">
-              <legend class="unit xs-1 s-1 giga push-1-2">What activities are you interested in helping with?</legend>
+            <fieldset class="unit xs-1 s-1 m-1 l-1 xl-1 push-2">
+              <legend class="unit xs-1 s-1 m-1 l-1 xl-1 giga push-1-2">What activities are you interested in helping with?</legend>
               <div class="grid">
                 <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
                   <div class="grid">
