--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
               </div>
             </fieldset>
           </div>
-          <fieldset class="grid">
-            <legend class="unit xs-1 s-1 m-1 l-1 xl-1 giga push-1-2">Do you have any experience with the following?</legend>
+          <fieldset>
+            <legend class="giga push-1-2">Do you have any experience with the following?</legend>
             <div class="grid">
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
                 <div class="grid">
